# ascot5

./: .clang-format  .gitignore  .gitlab-ci.yml  .nbi.c.swp  .pylintrc  .setcdllascot2py.py  B_2D.c  B_2D.h  B_2DS.c  B_3D.c  B_3D.h  B_GS.c  B_GS.h  B_ST.c  B_ST.h  B_TC.c  B_TC.h  B_field.c  B_field.h  Dockerfile  Doxyfile  E_1D.c  E_1D.h  E_TC.c  E_TC.h  E_field.c  E_field.h  LICENSE  MANIFEST.in  Makefile  Makefile.cray_amd  Makefile.nvhpc  Makefile.nvhpc_A100  README.rst  afsi.c  afsi.h  ascot4_interface.c  ascot4_interface.h  ascot5.h  ascot5_gc.c  (+180 more)
Bfield/: B_2D.c  B_2D.h  B_2DS.c  B_2DS.h  B_2Dspl.c  B_2Dspl.h  B_3D.c  B_3D.h  B_3DS.c  B_3DS.h  B_3DST.c  B_3DST.h  B_3DS_T.c  B_3DS_T.h  B_GS.c  B_GS.h  B_ST.c  B_ST.h  B_STS.c  B_STS.h  B_TC.c  B_TC.h
Efield/: E_1D.c  E_1D.h  E_1DS.c  E_1DS.h  E_3D.c  E_3D.h  E_3DS.c  E_3DS.h  E_3DST.c  E_3DST.h  E_TC.c  E_TC.h
a5py/: .gitignore  Doxyfile  MANIFEST.in  README.rst  __init__.py  ascot5.yaml  exceptions.py  libascot.py  requirements.txt  setup.py
ascot4_interface/: ascot4_erad.py  ascot4_interface.py  ascot4_magn_bkg.py  ascot4_particles.py  ascot4_plasma.py  ascot4_wall_2d.py  ascot4_wall_3d.py
asigma/: asigma_loc.c  asigma_loc.h
bmc/: bmc.c  bmc.h  bmc_diag.c  bmc_diag.h  bmc_init.c  bmc_init.h  bmc_simulate.c  bmc_simulate.h  bmc_wall.c  bmc_wall.h
diag/: diag_orb.c  diag_orb.h  diag_transcoef.c  diag_transcoef.h  dist_5D.c  dist_5D.h  dist_6D.c  dist_6D.h  dist_com.c  dist_com.h  dist_rho5D.c  dist_rho5D.h  dist_rho6D.c  dist_rho6D.h
doc/: Doxyfile  Makefile  ascotwork.bib  conf.py  dataform.rst  (+15 more)
(+1387 files in other folders)
